Build email auth and scalable data topology
